--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,16 @@
-
+streamlit
 fastapi
 uvicorn
-streamlit
-
-langchain
+langchain>=0.1.0
 langchain-openai
 langchain-community
-
-
 chromadb
-
-
-PyMuPDF  
-beautifulsoup4  
-
-
+pymupdf
+beautifulsoup4
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
 google-api-python-client
-
-
 python-dotenv
 pydantic
 requests
