--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-streamlit==1.32.0
-langchain>=0.1.9
-langchain-openai>=0.0.8
-langchain-community>=0.0.25
-langchain-core>=0.1.29
-langchain-text-splitters>=0.0.1
-chromadb>=0.4.24
-pymupdf>=1.23.26
-beautifulsoup4>=4.12.3
-google-auth>=2.28.1
-google-auth-oauthlib>=1.2.0
-google-auth-httplib2>=0.2.0
-google-api-python-client>=2.121.0
-python-dotenv>=1.0.1
-pydantic>=2.6.4
-requests>=2.31.0
+streamlit
+langchain
+langchain-google-genai
+langchain-community
+langchain-core
+langchain-text-splitters
+chromadb
+pymupdf
+beautifulsoup4
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+python-dotenv
+pydantic
+requests
