--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-langchain
+langchain>=0.1.0
 langchain-google-genai
 langchain-community
 langchain-core
@@ -14,3 +14,4 @@ google-api-python-client
 python-dotenv
 pydantic
 requests
+pypdf
