--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-streamlit
-langchain==0.3.0
-langchain-google-genai
-langchain-community
-langchain-core
-langchain-text-splitters
-chromadb
-pymupdf
-beautifulsoup4
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
-python-dotenv
-pydantic
-requests
-pypdf
+streamlit==1.42.0
+langchain==0.3.18
+langchain-google-genai==2.0.9
+langchain-community==0.3.17
+langchain-core==0.3.34
+langchain-text-splitters==0.3.6
+chromadb==0.6.3
+pymupdf==1.25.3
+beautifulsoup4==4.13.3
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
+google-api-python-client==2.162.0
+python-dotenv==1.0.1
+pydantic==2.10.6
+requests==2.32.3
+pypdf==5.3.0
